Adicionando estaqueamento Utils + minor fixes